[package]
name = "plugin_rustside"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
lazy_static = "1.4.0"
num-format = "0.4.4"
rumqttc = "0.23.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["v4"] }

[build-dependencies]
bindgen = "0.69.1"
